# Habit_Tracker_venv

./: .env.sample  .gitignore  data_habits.json  data_users.json  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
habit/: admin.py  models.py  paginators.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_habit_action.py  0003_alter_habit_action.py  0004_alter_habit_options.py
habit/serializers/: habit_serializers.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/serializers/: user_serializers.py
